--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
 </head>
 
 <body>
-    <div class="logo">
         <div id="animation-container" class="animation-container">Practice Digital Handwriting!</div>
-    </div>
     <div class="card-grid">
-        <div class="card" data-option="uppercase">ABC</div>
-        <div class="card" data-option="lowercase">abc</div>
-        <div class="card" data-option="numbers">123</div>
+        <div class="card" data-option="uppercase" id="uppercase-card">ABC</div>
+        <div class="card" data-option="lowercase" id="lowercase-card">abc</div>
+        <div class="card" data-option="numbers" id="numbers-card">123</div>
         <div class="card" data-option="special">$*/</div>
         <div class="card" data-option="upload">Upload</div>
         <div class="card" data-option="image">Sample</div>
     </div>
+    <div class="second-card-grid">
+       
+    </div>
+
    
     <div class="container hidden" id="first-card-section">
         <div class="options" id="options">
