--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="card" data-option="numbers" id="numbers-card">123</div>
         <div class="card" data-option="special" id="special-card">$*/</div>
         <div class="card" data-option="upload">Upload</div>
-        <div class="card" data-option="image" id="image-card-1">Sample</div>
+        <div class="card gap-class" data-option="image" id="image-card-1"> Cursive Writing</div>
     </div>
     <div class="image-grid" id="image-grid-1"></div>
 
@@ -66,7 +66,9 @@
                 </button>
                 <button id="color-button" class="color-button" type="button">
                     <img class="paint" src="./images/color.png" />
+                    <input type="color" id="colorPicker" style="display: none;">
                 </button>
+            
 
             </div>
         </div>
