--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="images/favicon.png">
 
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Practice Digital Handwriting</title>
 </head>
 
 <body>
